--- a/src/app/shared/components/forms/gasto-crud-form/gasto-crud-form.component.html
+++ b/src/app/shared/components/forms/gasto-crud-form/gasto-crud-form.component.html
@@ -167,6 +167,31 @@
                 [messages]="GastoCrudErrorMessages['tipo_gasto_id']"
               ></app-valid-messages-form>
             </c-col>
+            <!-- <c-col [md]="3">
+              <div cFormFloating>
+                <select
+                  cSelect
+                  id="metodo_pago_id_{{ i }}"
+                  formControlName="metodo_pago_id"
+                >
+                  <option value="0" hidden>Seleccione un método de pago</option>
+                  <option
+                    *ngFor="let MetodoPago of MetodosPagos; let i = index"
+                    [ngValue]="MetodoPago.id"
+                  >
+                    {{ MetodoPago.descripcion | titlecase }}
+                  </option>
+                </select>
+                <label cLabel for="metodo_pago_id_{{ i }}"
+                  >Método de pago
+                  <c-spinner size="sm" *ngIf="loadingMetodosPagos" />
+                </label>
+              </div>
+              <app-valid-messages-form
+                [errors]="getGastoControlError(i, 'metodo_pago_id')"
+                [messages]="GastoCrudErrorMessages['metodo_pago_id']"
+              ></app-valid-messages-form>
+            </c-col> -->
             <c-col [md]="3" *ngIf="isProducto(gasto.value)">
               <div cFormFloating>
                 <!-- <input
@@ -248,10 +273,89 @@
                 [messages]="GastoCrudErrorMessages['precio']"
               ></app-valid-messages-form>
             </c-col>
+            <hr />
+
+            <c-col [md]="12" formArrayName="metodos_pagos">
+              <div class="d-flex align-items-center mb-3">
+                <h6 class="me-3">Métodos de Pago</h6>
+                <button
+                  cButton
+                  color="primary"
+                  type="button"
+                  (click)="agregarMetodoPago(i)"
+                  [disabled]="getMetodosPagosForm(i).length == 2"
+                >
+                  <svg cIcon height="18" name="cil-plus"></svg>
+                </button>
+              </div>
+              <c-row
+                *ngFor="
+                  let mPago of getMetodosPagoControls(gasto);
+                  let j = index
+                "
+                [formGroupName]="j"
+                class="mb-4 m-3 pt-4 border position-relative flex-row"
+              >
+                <c-col [md]="3">
+                  <div cFormFloating>
+                    <select
+                      cSelect
+                      id="metodo_pago_id"
+                      formControlName="metodo_pago_id"
+                    >
+                      <option value="0" hidden>
+                        Seleccione un método de pago
+                      </option>
+                      <option
+                        *ngFor="let MetodoPago of MetodosPagos; let i = index"
+                        [ngValue]="MetodoPago.id"
+                      >
+                        {{ MetodoPago.descripcion | titlecase }}
+                      </option>
+                    </select>
+                    <label cLabel for="metodo_pago_id"
+                      >Método de pago
+                      <c-spinner size="sm" *ngIf="loadingMetodosPagos" />
+                    </label>
+                  </div>
+                  <app-valid-messages-form
+                    [errors]="getMetodoPagoError(i, j, 'metodo_pago_id')"
+                    [messages]="GastoCrudErrorMessages['metodo_pago_id']"
+                  ></app-valid-messages-form>
+                </c-col>
+                <c-col [md]="3">
+                  <div cFormFloating>
+                    <input
+                      cFormControl
+                      id="monto_{{ j }}"
+                      formControlName="monto"
+                      type="text"
+                      placeholder="Cantidad"
+                      appOnlyNumbers
+                    />
+                    <label cLabel for="monto_{{ i }}">Cantidad</label>
+                  </div>
+                  <app-valid-messages-form
+                    [errors]="getMetodoPagoError(i, j, 'monto')"
+                    [messages]="GastoCrudErrorMessages['monto']"
+                  ></app-valid-messages-form>
+                </c-col>
+                <c-col [md]="1">
+                  <button
+                    cButton
+                    color="danger"
+                    (click)="eliminarMetodoPago(i, j)"
+                    [disabled]="getMetodosPagosForm(i).length <= 1"
+                  >
+                    <svg cIcon height="18" name="cil-trash"></svg>
+                  </button>
+                </c-col>
+              </c-row>
+            </c-col>
           </c-row>
         </c-col>
 
-        <c-col [md]="1" class="align-content-center">
+        <c-col [md]="1" class="align-content-start">
           <button
             cButton
             color="danger"
