Actualizar modelos y vistas para gestionar métodos de pago y gastos en nómina; se añaden campos y se mejora la visualización en los formularios.

--- a/src/app/pages/nomina/nomina-listado/nomina-listado.component.html
+++ b/src/app/pages/nomina/nomina-listado/nomina-listado.component.html
@@ -121,14 +121,14 @@
                 </td>
                 <td>
                   <div class="d-flex flex-direction">
-                    <!-- <div class="me-3" ngbTooltip="Editar">
+                    <div class="me-3" ngbTooltip="Editar">
                       <a
                         [routerLink]="['/nominas', 'editar', nomina.id]"
-                        cTooltip="Editar"
+                        cTooltip="Visualizar"
                       >
-                        <svg cIcon height="18" name="cil-pencil"></svg>
+                        <svg cIcon height="18" name="fa-eye"></svg>
                       </a>
-                    </div> -->
+                    </div>
                     <div
                       class=""
                       ngbTooltip="Eliminar"
