--- a/src/app/pages/gasto/gasto-editar/gasto-editar.component.html
+++ b/src/app/pages/gasto/gasto-editar/gasto-editar.component.html
@@ -41,6 +41,7 @@
           </div>
         </div>
         <div class="row mb-5">
+          <h5>Gastos</h5>
           <table cTable [responsive]="true" [hover]="true">
             <thead class="text-nowrap text-truncate">
               <tr>
@@ -80,6 +81,30 @@
             </tbody>
           </table>
         </div>
+        <div class="row mb-5">
+          <h5>Métodos de Pago</h5>
+          <table cTable [responsive]="true" [hover]="true">
+            <thead class="text-nowrap text-truncate">
+              <tr>
+                <th class="bg-body-tertiary">#</th>
+                <th class="bg-body-tertiary">Tipo de pago</th>
+                <!-- <th class="bg-body-tertiary">Linea</th> -->
+                <th class="bg-body-tertiary">Monto</th>
+              </tr>
+            </thead>
+            <tbody>
+              @for (mp of Gasto.metodo_pago; track mp.id; let m= $index) {
+              <tr>
+                <td>{{ m + 1 }}</td>
+                <td>{{ mp.metodo_pago?.descripcion }}</td>
+                <!-- <td>{{ gast.producto?.linea }} u.</td> -->
+                <td>{{ mp.monto | currency : "ARS" }}</td>
+              </tr>
+
+              }
+            </tbody>
+          </table>
+        </div>
         <!-- <div class="row text-end mb-1">
           <div class="col-md-9"><strong>Subtotal:</strong></div>
           <div class="col-md-3">{{ Factura.sub_total | currency : "ARS" }}</div>
@@ -89,10 +114,10 @@
           <div class="col-md-3">{{ Factura.descuento }} %</div>
         </div>
         -->
-        <div class="row text-end fw-bold fs-5">
+        <!-- <div class="row text-end fw-bold fs-5">
           <div class="col-md-9">Total:</div>
           <div class="col-md-3">{{ Gasto.total | currency : "ARS" }}</div>
-        </div>
+        </div> -->
       </div>
     </c-container>
     <c-container [fluid]="true" class="px-0 text-center" *ngIf="loaderGasto">
