--- a/src/app/pages/nomina/nomina-editar/nomina-editar.component.html
+++ b/src/app/pages/nomina/nomina-editar/nomina-editar.component.html
@@ -1,6 +1,9 @@
 <c-card class="my-4">
   <c-card-header>
-    <p class="h3">Editar Nomina</p>
+    <div class="d-flex justify-content-between align-items-center">
+      <p class="h3">Nomina #{{ Id }}</p>
+      <p class="h6">{{ Nomina.fecha_inicio }} - {{ Nomina.fecha_inicio }}</p>
+    </div>
   </c-card-header>
   <c-card-body class="pt-4">
     @if(loader){
@@ -16,12 +19,153 @@
     }@else {
     <c-container [fluid]="true" class="px-0">
       <c-row class="mb-4">
-        <c-col>
+        <c-col [md]="12">
+          <ul class="list-group mx-auto col-6">
+            <li
+              *ngFor="let servicios of Nomina.servicios"
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
+              {{ servicios.descripcion }} -
+              {{ servicios.cantidad > 0 ? "Unds" : "Und" }}
+              <span
+                class="badge badge-primary badge-pill"
+                style="font-size: 1.02em"
+                >{{ servicios.precio_nomina * servicios.cantidad }}</span
+              >
+            </li>
+          </ul>
+        </c-col>
+        <c-col [md]="12">
           <div class="small text-body-secondary mt-3">
-            <!-- <app-nomina-crud-form
-              [Nomina]="Nomina"
-              (FormsValues)="FormsValues($event)"
-            /> -->
+            <!-- Tabla de servicios -->
+
+            <!-- Servicios total -->
+            <ul class="list-group mb-4 col-md-6 mx-auto">
+              <li
+                class="list-group-item d-flex justify-content-between align-items-center"
+                style="font-size: 1.02em"
+              >
+                Servicios total
+                <span
+                  class="badge bg-primary rounded-pill"
+                  style="font-size: 1.02em"
+                  >{{ Nomina.monto_facturado | currency : "ARS" }}</span
+                >
+              </li>
+            </ul>
+
+            <!-- Gastos pendientes -->
+            <div class="mb-4 p-3 border">
+              <h5>Gastos pendientes</h5>
+              <ul
+                class="list-group mb-4 col-md-6 mx-auto justify-content-center"
+              >
+                <li
+                  class="list-group-item d-flex justify-content-between align-items-center"
+                  *ngFor="let Gasto of Nomina.gastos"
+                >
+                  {{ Gasto.created_at | date : "dd/MM/yyyy" }}
+                  <span
+                    class="badge bg-primary rounded-pill"
+                    style="font-size: 1.02em"
+                    >{{ Gasto.total | currency : "ARS" }}</span
+                  >
+                </li>
+              </ul>
+            </div>
+
+            <!-- Extras -->
+            <div class="mb-4 p-3 border">
+              <div
+                class="d-flex justify-content-between align-items-center mb-2"
+              >
+                <h5 class="me-3">Extras</h5>
+              </div>
+              <ul
+                class="list-group list-group-horizontal justify-content-center"
+                *ngFor="let Vale of Nomina.vales; let i = index"
+              >
+                <li class="list-group-item">
+                  <span class="fw-bold">#{{ i + 1 }}</span>
+                </li>
+                <li class="list-group-item">
+                  Tipo: {{ Vale.tipo == 1 ? "Adición" : "Deducción" }}
+                </li>
+                <li class="list-group-item">
+                  Monto: {{ Vale.monto | currency : "ARS" }}
+                </li>
+                <li class="list-group-item">
+                  Descripción: {{ Vale.descripcion || "-" }}
+                </li>
+              </ul>
+            </div>
+
+            <!-- Presentismo -->
+            <div class="mb-4 p-3 border row align-items-center">
+              <div class="col-md-12">
+                <h5>Presentismo</h5>
+              </div>
+              <ul
+                class="list-group mb-4 col-md-6 mx-auto justify-content-center"
+              >
+                <li
+                  class="list-group-item d-flex justify-content-between align-items-center"
+                >
+                  Presentismo
+                  <span
+                    class="badge bg-primary rounded-pill"
+                    style="font-size: 1.02em"
+                    >%{{ Nomina.presentismo }}</span
+                  >
+                </li>
+                <li
+                  class="list-group-item d-flex justify-content-between align-items-center"
+                >
+                  Presentismo Valor
+                  <span
+                    class="badge bg-primary rounded-pill"
+                    style="font-size: 1.02em"
+                    >{{ Nomina.presentismoTotal | currency : "ARS" }}</span
+                  >
+                </li>
+              </ul>
+            </div>
+
+            <!-- Métodos de Pago -->
+            <div class="mb-4 p-3 border">
+              <div
+                class="d-flex justify-content-between align-items-center mb-2"
+              >
+                <h5 class="me-3">Métodos de Pago</h5>
+              </div>
+              <div class="card p-3 mb-3">
+                <ul
+                  class="list-group mb-4 col-md-6 mx-auto justify-content-center"
+                >
+                  <li
+                    class="list-group-item d-flex justify-content-between align-items-center"
+                    *ngFor="let MP of Nomina.metodos_pago"
+                  >
+                    {{ MP.metodo_pago.tipo }}
+                    <span
+                      class="badge bg-primary rounded-pill"
+                      style="font-size: 1.02em"
+                      >{{ MP.monto | currency : "ARS" }}</span
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- Total a pagar -->
+            <div class="text-end p-3 mb-4 border">
+              <h5>
+                Total a pagar:
+                <span class="badge bg-primary rounded-pill">{{
+                  Nomina.total_facturado | currency : "ARS"
+                }}</span>
+              </h5>
+            </div>
           </div>
         </c-col>
       </c-row>
