--- a/src/app/pages/factura/factura-listado/factura-listado.component.html
+++ b/src/app/pages/factura/factura-listado/factura-listado.component.html
@@ -196,7 +196,7 @@
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
       [showDate]="true"
-      [showEstado]="true"
+      [showEstado]="false"
       [showValidDates]="true"
     />
   </c-modal-body>
