--- a/src/app/shared/components/forms/gasto-crud-form/gasto-crud-form.component.html
+++ b/src/app/shared/components/forms/gasto-crud-form/gasto-crud-form.component.html
@@ -339,7 +339,7 @@
                 *ngFor="let MetodoPago of MetodosPagos; let i = index"
                 [ngValue]="MetodoPago.id"
               >
-                {{ MetodoPago.descripcion | titlecase }}
+                {{ MetodoPago.tipo | titlecase }}
               </option>
             </select>
             <label cLabel for="metodo_pago_id_{{ j }}"
