--- a/src/app/pages/panel/panel-list/panel-list.component.html
+++ b/src/app/pages/panel/panel-list/panel-list.component.html
@@ -54,6 +54,32 @@
           <c-spinner aria-hidden="true" size="sm" variant="grow" />
           }@else{
           <c-widget-stat-c
+            [title]="'Facturación'"
+            color="success"
+            inverse
+            value="{{ sumaFacturacion() | currency : 'ARS' }}"
+          >
+            <ng-template cTemplateId="widgetIconTemplate">
+              <svg cIcon height="36" name="faFileInvoiceDollar"></svg>
+            </ng-template>
+          </c-widget-stat-c>
+
+          }
+        </c-col>
+
+        <c-col
+          xl="3"
+          lg="4"
+          sm="6"
+          class=""
+          [ngClass]="{
+            'align-items-center justify-content-center d-flex': loaderPanel
+          }"
+        >
+          @if(loaderPanel){
+          <c-spinner aria-hidden="true" size="sm" variant="grow" />
+          }@else{
+          <c-widget-stat-c
             [title]="'Caja efectivo'"
             color="success"
             inverse
@@ -146,6 +172,37 @@
           </c-widget-stat-c>
           }
         </c-col>
+        @if(Panel && Panel.Servicios_Contador.length>0){ @for (service of
+        Panel.Servicios_Contador; track service.id; let index = $index) {
+
+        <c-col
+          xl="3"
+          lg="4"
+          sm="6"
+          [ngClass]="{
+            'align-items-center justify-content-center d-flex': loaderPanel
+          }"
+        >
+          @if(loaderPanel){
+          <c-spinner aria-hidden="true" size="sm" variant="grow" />
+          }@else{
+          <c-widget-stat-c
+            [title]="service.descripcion"
+            color="info"
+            inverse
+            value="{{
+              service.cantidad > 1
+                ? service.cantidad + ' Servs.'
+                : service.cantidad + ' Serv.'
+            }}"
+          >
+            <ng-template cTemplateId="widgetIconTemplate">
+              <svg cIcon height="36" name="faHandHoldingDollar"></svg>
+            </ng-template>
+          </c-widget-stat-c>
+          }
+        </c-col>
+        } }
 
         <c-col
           xl="3"
