Actualizar el pie de página para mostrar la información de A&RDevs; ajustar los filtros en el panel para desactivar la visualización de fechas válidas y agregar un nuevo parámetro de filtro. Modificar la lógica de fechas en el componente de usuario al insertar y añadir un nuevo input para la fecha en el formulario de filtros.

--- a/src/app/layout/default-layout/default-footer/default-footer.component.html
+++ b/src/app/layout/default-layout/default-footer/default-footer.component.html
@@ -3,9 +3,8 @@
   <span> &copy; {{ YEAR }} </span>
 </div>
 <div class="ms-auto">
-  Desarrollado por
-  <a href="https://coreui.io/angular" target="_blank">
-    <span>Firma</span>
+  ©
+  <a href="https://github.com/alejosb13" target="_blank">
+    <span>A&RDevs</span>
   </a>
 </div>
-<!-- </c-footer> -->
