--- a/src/app/pages/factura/factura-insertar2/factura-insertar2.component.scss
+++ b/src/app/pages/factura/factura-insertar2/factura-insertar2.component.scss
@@ -23,3 +23,17 @@
   cursor: pointer;
   transition: opacity 0.3s ease-in-out;
 }
+
+.hasPago {
+  background-color: #e6f4ea;
+  border: 3px solid #03990b;
+}
+
+::ng-deep {
+  [data-coreui-theme="dark"] {
+    .hasPago {
+      background-color: #2e3c35;
+      border: 3px solid #03990b;
+    }
+  }
+}
